--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,6 +1,6 @@
 <!--<h1 class="top-text titile-font">We are on top!</h1>-->
 
-<div class="about">
+<div class="about" id="about">
   <div class="main-card">
     <app-mycard></app-mycard>
   </div>
