--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-about></app-about>
+<app-about #about></app-about>
 <app-skills></app-skills>
 <app-projects></app-projects>
 <app-contacts></app-contacts>
